--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@supabase/supabase-js": "^2.39.0",
-    "lucide-react": "^0.263.1"
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
