--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "18.3.1",
     "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "recharts": "^2.10.3",
+    "lucide-react": "^0.263.1",
+    "@supabase/auth-helpers-nextjs": "^0.8.7"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
