☢️ NUCLEAR: Disable all TypeScript strict checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,12 @@
       ]
     },
     "noImplicitAny": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "strictFunctionTypes": false,
+    "strictBindCallApply": false,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": false,
+    "alwaysStrict": false
   },
   "include": [
     "next-env.d.ts",
