--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "market-oracle",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,23 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "@supabase/supabase-js": "^2.39.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0",
-    "recharts": "^2.10.3",
-    "lucide-react": "^0.263.1",
-    "@supabase/auth-helpers-nextjs": "^0.8.7"
+    "next": "14.2.15",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@supabase/supabase-js": "^2.45.4",
+    "recharts": "^2.12.7",
+    "framer-motion": "^11.11.1",
+    "lucide-react": "^0.446.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
-    "@types/node": "20.14.10",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "typescript": "5.5.3",
-    "tailwindcss": "3.4.4",
-    "postcss": "8.4.39",
-    "autoprefixer": "10.4.19"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15"
   }
 }
