--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=https://kteobfyferrukqeolofj.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+
+# Optional: Service key for server-side operations
+SUPABASE_SERVICE_KEY=your_service_key_here
+
+# API Keys (for future AI integration)
+OPENAI_API_KEY=your_openai_key
+ANTHROPIC_API_KEY=your_anthropic_key
+GEMINI_API_KEY=your_gemini_key
+PERPLEXITY_API_KEY=your_perplexity_key
