--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "market-oracle",
-  "version": "2.0.0",
+  "version": "2.0.0-ULTIMATE",
   "private": true,
   "scripts": {
     "dev": "next dev",
