--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "lucide-react": "^0.446.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.3"
+    "tailwind-merge": "^2.5.3",
+    "openai": "^4.20.0",
+    "@anthropic-ai/sdk": "^0.27.0",
+    "@google/generative-ai": "^0.1.3"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -32,3 +35,4 @@
     "eslint-config-next": "14.2.15"
   }
 }
+
